chore: Removed unused imports and adhered to some coding standards
Signed-off-by: Saptarshi Sarkar <saptarshi.programmer@gmail.com>